Fix footer scrollbars in Identity pages.

--- a/LoadingArtistCrowdSource/Server/wwwroot/css/site.css
+++ b/LoadingArtistCrowdSource/Server/wwwroot/css/site.css
@@ -7,6 +7,27 @@ a.navbar-brand {
 	word-break: break-all;
 }
 
+/* Provide sufficient contrast against white background */
+a {
+	color: #0366d6;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: #1b6ec2;
+	border-color: #1861ac;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+	color: #fff;
+	background-color: #1b6ec2;
+	border-color: #1861ac;
+}
+
+.btn-link.nav-link:focus {
+	outline: black auto 1px;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -60,9 +81,9 @@ body {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	overflow: scroll;
+	overflow: auto;
 	white-space: nowrap;
 	/* Set the fixed height of the footer here */
 	height: 60px;
-	line-height: 60px; /* Vertically center the text there */
+	line-height: 59px; /* Vertically center the text there */
 }
